# serializer version: 1
# name: TestDosBoxGenerator.test_generate
  tuple(
    list([
      '/usr/bin/dosbox',
      '-fullscreen',
      '-userconf',
      '-exit',
      PosixPath('/userdata/roms/dos/rom.pc/dosbox.bat'),
      '-c',
      'set ROOT=/userdata/roms/dos/rom.pc',
      '-conf',
      PosixPath('/userdata/system/configs/dosbox/dosbox.conf'),
    ]),
    dict({
    }),
  )
# ---
# name: TestDosBoxGenerator.test_generate_conf
  tuple(
    list([
      '/usr/bin/dosbox',
      '-fullscreen',
      '-userconf',
      '-exit',
      PosixPath('/userdata/roms/dos/rom.pc/dosbox.bat'),
      '-c',
      'set ROOT=/userdata/roms/dos/rom.pc',
      '-conf',
      PosixPath('/userdata/roms/dos/rom.pc/dosbox.cfg'),
    ]),
    dict({
    }),
  )
# ---
# name: TestDosBoxGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTCTRL',
        'KEY_F9',
      ]),
    }),
    'name': 'dosbox',
  })
# ---
